fix programlisting code wrapping (which causes it to look ugly) by simply not auto-wrapping but adding a horizontal scrollbar.

--- a/pressgang-jdocbook-style/src/main/css/css/documentation.css
+++ b/pressgang-jdocbook-style/src/main/css/css/documentation.css
@@ -141,7 +141,7 @@ pre {
 code {white-space:nowrap;}
 
 pre code {
-    white-space: pre-wrap;
+    white-space: pre;
 }
 
 /* Admonitions */
